@@ -1,3 +1,5 @@
+Nov 17, 2026: libarchive 3.8.3 released
+
 Oct 15, 2026: libarchive 3.8.2 released
 
 Jun 01, 2026: libarchive 3.8.1 released
